# Median

./: CMakeLists.txt
src/: MedianGetter.cpp  MedianGetter.h  SimpleApp.cpp
tests/: MedianTest.cpp  medianTest.cpp
